# trainer3

./: .gitignore  DatasetFromCrops.py  ImageTransformer.py  ReverseDefisheye.py  Segmenter.py  backgroundImageProcessor.py  camConfig.json  camConfig1.json  correctLabels.py  createUndistortedBeltImages.py  dataseMakerParallel.py  datasetVis.py  defisheye.py  defisheye_maps.npz.npy  imageMaker.py  infer.py  output.yaml  pyproject.toml  roiSelector.py  saveCrops.py  saveCrops_v2.py  simpleInfer.py  test.py  trainer.py  trainfer.py
dataset0/: data.yaml
dataset1/: data.yaml
dataset2/: data.yaml
dataset3/: data.yaml
dataset4/: data.yaml
dataset5/: data.yaml
dataset6/: data.yaml
dataset7/: data.yaml
dataset8/: data.yaml
run/11n-35-training/: args.yaml
run/11n-35-training2/: args.yaml
run/11n-35-training3/: args.yaml
run/11n-35-training4/: args.yaml
run/11n-35-training5/: args.yaml  results.csv
run/11n-35-training6/: args.yaml  results.csv
run/yolo11s.pt-100-dataset3/: args.yaml  results.csv
run/yolo11s.pt-100-dataset32/: args.yaml  results.csv
run/yolo11s.pt-100-dataset4/: args.yaml  results.csv
run/yolo11s.pt-20-dataset6/: args.yaml  results.csv
run/yolo11s.pt-50-dataset0/: args.yaml  results.csv
run/yolo11s.pt-50-dataset1/: args.yaml  results.csv
run/yolo11s.pt-50-dataset12/: args.yaml  results.csv
run/yolo11s.pt-50-dataset2/: args.yaml  results.csv
run/yolo11s.pt-50-dataset22/: args.yaml  results.csv
run/yolo11s.pt-50-dataset3/: args.yaml  (+1 more)
segmenterApp/: image_display.py  segmentation.py  segmentation_app.py  toolbar.py
(+8 files in other folders)
